# osrx

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
ext/: nginx.conf.template
web/: .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json  tokens.css  vite.config.ts
web/src/: app.css  app.d.ts  app.html
web/src/lib/: animations.ts  api.ts  mods.ts  types.ts
web/src/lib/components/: AnimatedNumber.svelte  DropZone.svelte  FieldRow.svelte  LazerModSettingsEditor.svelte  ModSelector.svelte
web/src/lib/css/: page-ambient.css  page-chrome.css  page-editor.css  page-keyframes.css
web/src/routes/: +page.svelte
web/static/mods/: README.md
