[package]
name    = "osrx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = { version = "0.8", features = ["multipart"] }
tokio      = { version = "1",   features = ["rt-multi-thread", "macros", "signal", "net"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
osr-rs     = "0.1.1"
chrono     = { version = "0.4", features = ["serde"] }
base64     = "0.22"
